dotnetrdf-develop@lists.sf.net

See Acknowledgements.txt for full list of developers and contributors

Change Log
----------

This represents a summary of additions, changes and removals for the 0.8.0 release of dotNetRDF

Added

Changed
- Bug Fixes
 - Fixed an internal API inconsistency
 - Fixed a bug in the BNODE() function
 - Fixed a bug in Extend that could occur when many Extends were nested together
 - Fixed an intermittent race condition in the implementation of parallel Left Join
 - Fixed a bug in the evaluation of some complex GROUP BY statements
 - Fixed a bug in the string representation of CountDistinctAggregate
 - Fixed a bug related to internal APIs for building queries

- Dependencies
 - Updated Query.FullText Library to use Lucene.Net 3.0.3

- Build
 - Query.FullText Library is now always strong named
 - Query.FullText NuGet package now references Lucene.Net as a dependency instead of including it in the package

- Parsing/Writing
 - Improved how parsers and writers are selected by file extension
 - Improved content negotiation logic to properly support quality factors and type ranges
 - Avoid using blocking IO when parsing from file/memory streams


- Query
 - Improved how Distinct() algebra behaves with respect to trimming temporary variables to better support complex property paths
 - Improved how GROUP BY, aggregates and Project Expressions are implemented internally
 - Improved parallel implementation of Left Join

Removed
- Marks the obsolete JosekiConnector as obsolete unusable
- Removed the obsolete TalisPlatformConnector
- Removed the obsolete IndexedTripleCollection and it's descendants
- Marks some obsolete property and class constants in ConfigurationLoader as obsolete unusable
- Removes the previously obsoleted property and class constants in ConfigurationLoader
- Marks the obsolete HashTable classes as obsolete unusable
- Marks the obsolete Graph() method of ITripleStore as obsolete unusable (superceded by indexer access)
   



